--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,16 @@
         "psr-4": {
             "hiam\\mrdp\\": "src"
         }
-    }
+    },
+    "extra": {
+        "config-plugin": {
+            "hisite": "src/config/hisite.php"
+        }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
