--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     ],
     "require-dev": {
         "hiqdev/hidev-php": "<2.0 || dev-master",
-        "hiqdev/hidev-hiqdev": "<2.0 || dev-master"
+        "hiqdev/hidev-hiqdev": "<2.0 || dev-master",
+        "codeception/codeception": "^2.4"
     },
     "autoload": {
         "psr-4": {
